samples/_failures_safe/1761638948_6568f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a927938f.c: In function ‘main’:
./samples/SAFE/__tmp_a927938f.c:140: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_a927938f.c:139:5: error: expected declaration or statement at end of input
  139 |     if
      |     ^~
